<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinnerTipo"
        android:layout_width="284dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textUbicacion"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:duplicateParentState="false"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/ubicacion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/ubicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipo" />

    <ImageView
        android:id="@+id/foto1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="88dp"
        android:contentDescription="@android:string/untitled"
        app:layout_constraintEnd_toStartOf="@+id/foto2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageUbicacion"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageView
        android:id="@+id/foto2"
        android:layout_width="195dp"
        android:layout_height="126dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@android:string/untitled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUbicacion"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <EditText
        android:id="@+id/textDescripcion"
        android:layout_width="271dp"
        android:layout_height="134dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/descripcion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foto2" />

    <Button
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/botonGuardar"
        app:layout_constraintEnd_toStartOf="@+id/botonSalir"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescripcion" />

    <Button
        android:id="@+id/botonSalir"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/botonSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescripcion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/descripcionincidencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/fotosincidencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUbicacion" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:text="@string/tipotext"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageUbicacion"
        android:layout_width="72dp"
        android:layout_height="67dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@android:string/untitled"
        app:layout_constraintEnd_toStartOf="@+id/textUbicacion"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTipo"
        app:srcCompat="@android:drawable/ic_dialog_map" />

</androidx.constraintlayout.widget.ConstraintLayout>